overlays/ack-auto-clouddisk/arena-installer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: arena-installer
  namespace: kube-system
spec:
  restartPolicy: Never
  serviceAccountName: admin
  hostNetwork: true
  containers:
  - name: arena
    image: registry.aliyuncs.com/acs/arena:0.2.0-3129577
