overlays/ack-auto-clouddisk/pipelines-minio-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-ing
  namespace: kubeflow
  annotations:
    ingress.kubernetes.io/rewrite-target: /minio
spec:
  tls:
  - hosts:
    - pipelines.kubeflow.org
    secretName: pipeline-secret
  rules:
  - http:
      paths:
      - path: /minio
        backend:
          serviceName: minio-service
          servicePort: 9000
